refactor: improve Session module with Specification pattern and clean architecture